--- a/src/blog-3.html
+++ b/src/blog-3.html
@@ -200,7 +200,7 @@
                     <div class="row pb-100">
                         <!-- blog wrap -->
                         <div class="col-lg-6" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
-                            <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                            <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
                                 <div class="post-image overflow-hidden"><img loading="lazy" src="images/blog-4.webp" alt="blog" class="w-100 img-fluid scale-img"></div>
                                 <div class="post-content p-3">
                                     <div class="d-flex flex-column px-1">
@@ -224,7 +224,7 @@
                         </div>
                         <div class="col-lg-6 gap-4 d-flex flex-column">
                             <div class="article" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
-                                <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                                <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
                                     <div class="row">
                                         <div class="col-lg-4 pe-0">
                                             <div class="post-image overflow-hidden h-100"><img loading="lazy" src="images/blog-1.webp" alt="blog" class="object-fit-cover h-100 w-100 scale-img"></div>
@@ -247,7 +247,7 @@
                             </div>
 
                             <div class="article" data-aos="fade-up" data-aos-duration="400" data-aos-delay="300">
-                                <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                                <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
                                     <div class="row">
                                         <div class="col-lg-4 pe-0">
                                             <div class="post-image overflow-hidden h-100"><img loading="lazy" src="images/blog-2.webp" alt="blog" class="object-fit-cover h-100 w-100 scale-img"></div>
@@ -270,7 +270,7 @@
                             </div>
 
                             <div class="article" data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">
-                                <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                                <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
                                     <div class="row">
                                         <div class="col-lg-4 pe-0">
                                             <div class="post-image overflow-hidden h-100"><img loading="lazy" src="images/blog-3.webp" alt="blog" class="object-fit-cover h-100 w-100 scale-img"></div>
