--- a/src/shop-1.html
+++ b/src/shop-1.html
@@ -349,7 +349,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Camisole Shoulder Straps </span>
+                                            <span class="product-title display2-size mb-0">Camisole Shoulder Straps </span>
                                             <p class="product-tag mb-2 mt-1">Dye Shirt Style Top</p>
                                             <p class="product-price lh-24 pt-1">$1,365.00 <span class="text-decoration-line-through">$1999.00</span> </p>								
                                         </div>
@@ -366,7 +366,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Mango Cotton Printed Top</span>
+                                            <span class="product-title display2-size mb-0">Mango Cotton Printed Top</span>
                                             <p class="product-tag mb-2 mt-1">Sleeves Empire Top</p>
                                             <p class="product-price lh-24 pt-1">$1,365.00 <span class="text-decoration-line-through">$1999.00</span> </p>								
                                         </div>
@@ -383,7 +383,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Typographic Print T-shirt </span>
+                                            <span class="product-title display2-size mb-0">Typographic Print T-shirt </span>
                                             <p class="product-tag mb-2 mt-1">Neck Puff Sleeve</p>
                                             <p class="product-price">$389.00 <span class="text-decoration-line-through">$999.00</span> </p>								
                                         </div>
@@ -400,7 +400,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Non-Padded T-Shirt Bras </span>
+                                            <span class="product-title display2-size mb-0">Non-Padded T-Shirt Bras </span>
                                             <p class="product-tag mb-2 mt-1">Printed Cotton Shirt</p>
                                             <p class="product-price">$499.00 <span class="text-decoration-line-through">$699.00</span> </p>								
                                         </div>
@@ -417,7 +417,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Slim-Fit Tank Top </span>
+                                            <span class="product-title display2-size mb-0">Slim-Fit Tank Top </span>
                                             <p class="product-tag mb-2 mt-1">Dye Shirt Style Top</p>
                                             <p class="product-price">$556.00 <span class="text-decoration-line-through">$999.00</span> </p>
                                         </div>
@@ -434,7 +434,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Neck Tie-Up Top </span>
+                                            <span class="product-title display2-size mb-0">Neck Tie-Up Top </span>
                                             <p class="product-tag mb-2 mt-1">Sleeves Empire Top</p>
                                             <p class="product-price">$299.00 <span class="text-decoration-line-through">$999.00</span> </p>								
                                         </div>
@@ -451,7 +451,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Protected Rim Wayfarers </span>
+                                            <span class="product-title display2-size mb-0">Protected Rim Wayfarers </span>
                                             <p class="product-tag mb-2 mt-1">Neck Puff Sleeve</p>
                                             <p class="product-price">$389.00 <span class="text-decoration-line-through">$999.00</span> </p>								
                                         </div>
@@ -468,7 +468,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Rectangular Rim Sunglasses</span>
+                                            <span class="product-title display2-size mb-0">Rectangular Rim Sunglasses</span>
                                             <p class="product-tag mb-2 mt-1">Dye Shirt Style Top</p>
                                             <p class="product-price">$1,365.00 <span class="text-decoration-line-through">$1999.00</span> </p>								
                                         </div>
@@ -485,7 +485,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2">
-                                            <span class="product-title mb-0">Mango Cotton Printed Top </span>
+                                            <span class="product-title display2-size mb-0">Mango Cotton Printed Top </span>
                                             <p class="product-tag mb-2 mt-1">Sleeves Empire Top</p>
                                             <p class="product-price">$2265.00 <span class="text-decoration-line-through">$2599.00</span> </p>								
                                         </div>
