--- a/src/shop-2.html
+++ b/src/shop-2.html
@@ -349,7 +349,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Camisole Shoulder Straps </span>
+                                            <span class="product-title mb-2 display3-size">Camisole Shoulder Straps </span>
                                             <p class="product-tag mb-2 mt-1">Dye Shirt Style Top</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -361,11 +361,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -383,7 +381,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Mango Cotton Printed Top</span>
+                                            <span class="product-title mb-2 display3-size">Mango Cotton Printed Top</span>
                                             <p class="product-tag mb-2 mt-1">Sleeves Empire Top</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -395,11 +393,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -417,7 +413,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Typographic Print T-shirt </span>
+                                            <span class="product-title mb-2 display3-size">Typographic Print T-shirt </span>
                                             <p class="product-tag mb-2 mt-1">Neck Puff Sleeve</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -429,11 +425,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -451,7 +445,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Non-Padded T-Shirt Bras </span>
+                                            <span class="product-title mb-2 display3-size">Non-Padded T-Shirt Bras </span>
                                             <p class="product-tag mb-2 mt-1">Printed Cotton Shirt</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -463,11 +457,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -485,7 +477,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Slim-Fit Tank Top </span>
+                                            <span class="product-title mb-2 display3-size">Slim-Fit Tank Top </span>
                                             <p class="product-tag mb-2 mt-1">Dye Shirt Style Top</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -497,11 +489,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -519,7 +509,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Neck Tie-Up Top </span>
+                                            <span class="product-title mb-2 display3-size">Neck Tie-Up Top </span>
                                             <p class="product-tag mb-2 mt-1">Sleeves Empire Top</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -531,11 +521,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -553,7 +541,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Protected Rim Wayfarers </span>
+                                            <span class="product-title mb-2 display3-size">Protected Rim Wayfarers </span>
                                             <p class="product-tag mb-2 mt-1">Neck Puff Sleeve</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -565,11 +553,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -587,7 +573,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Rectangular Rim Sunglasses</span>
+                                            <span class="product-title mb-2 display3-size">Rectangular Rim Sunglasses</span>
                                             <p class="product-tag mb-2 mt-1">Dye Shirt Style Top</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -599,11 +585,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
@@ -621,7 +605,7 @@
                                             </a>
                                         </div>
                                         <div class="shop-content mb-2 mt-3">
-                                            <span class="product-title mb-0">Mango Cotton Printed Top </span>
+                                            <span class="product-title mb-2 display3-size">Mango Cotton Printed Top </span>
                                             <p class="product-tag mb-2 mt-1">Sleeves Empire Top</p>
                                             <div class="review-star text-warning d-flex align-items-center mb-1 mt-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -633,11 +617,9 @@
                                             <p class="product-des fs-16 text-gray-600 fw-500">A wireless speaker with a dynamic acoustic performance designed to be positioned..</p>
                                             <div class="d-flex flex-row gap-2 mt-4">
                                                 <a href="#" class="btn bg-light2 px-4 text-white d-flex gap-2">
-                                                    <i data-feather="shopping-cart" class="w-4 h-4"></i>
                                                     Add to Cart
                                                 </a>
                                                 <a href="#" class="btn bg-light3 px-4 text-gray-800 d-flex align-items-center gap-2">
-                                                    <i data-feather="heart" class="w-4 h-4"></i>
                                                     Save
                                                 </a>
                                             </div>
