--- a/src/team.html
+++ b/src/team.html
@@ -13,6 +13,8 @@
     <link rel="preload" href="css/main.css" as="style">
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/main.css" />
+    <!-- Glightbox -->
+    <link rel="stylesheet" href="css/glightbox.css" />
     
 </head>
 
@@ -472,7 +474,7 @@
                             </div>
                         </div>
                         <div class="overflow-hidden rounded-5" data-aos="fade-up" data-aos-duration="500">
-                            <a href="#" class="position-relative d-inline-block w-100">
+                            <a href="images/about-video.mp4" class="glightbox position-relative d-flex w-100" data-type="video">
                                 <img src="images/team/member-24.webp" alt="banner" class="object-fit-cover w-100 img-fluid" width="306" height="407" loading="lazy">
                                 <img src="images/icon-play.png" alt="play" class="position-absolute z-10 translate-middle start-50 top-50" width="56" height="56" loading="lazy">
                             </a>
