--- a/src/home-one.html
+++ b/src/home-one.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <!-- Splide slider css -->
     <link rel="stylesheet" href="css/splideslider.css" />
+    <!-- Glightbox -->
+    <link rel="stylesheet" href="css/glightbox.css" />
     <!-- preload image -->
     <link rel="preload" as="image" href="images/home-1/right-banner-bg.webp" type="image/webp" fetchpriority="high">
     
@@ -666,7 +668,7 @@
                     </div>
                     <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-duration="400">
                         <div class="overflow-hidden rounded-5">
-                            <a href="#" class="position-relative">
+                            <a href="images/about-video.mp4" class="glightbox position-relative" data-type="video">
                                 <img src="images/home-1/home-bg-2.webp" alt="banner" class="h-450 object-fit-cover w-100" width="636" height="450" loading="lazy">
                                 <img src="images/icon-play.png" alt="play" class="position-absolute z-10 translate-middle-y start-50 top-50" width="56" height="56" loading="lazy">
                             </a>
@@ -861,7 +863,7 @@
                     </div>
                     <div class="row gy-4">
                         <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="300">
-                            <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                            <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                                 <div class="post-image scale-img overflow-hidden"><img src="images/blog-1.webp" alt="blog" loading="lazy"></div>
                                 <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                     <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
@@ -881,7 +883,7 @@
                             </a>
                         </div>
                         <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
-                            <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                            <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                                 <div class="post-image scale-img overflow-hidden"><img src="images/blog-3.webp" alt="blog" loading="lazy"></div>
                                 <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                     <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
@@ -901,7 +903,7 @@
                             </a>
                         </div>
                         <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="500">
-                            <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                            <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                                 <div class="post-image scale-img overflow-hidden"><img src="images/blog-2.webp" alt="blog" loading="lazy"></div>
                                 <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                     <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
