--- a/src/single-blog-1.html
+++ b/src/single-blog-1.html
@@ -183,7 +183,7 @@
                                 </div>
                             </div>
                             <h2 class="display5-size text-gray-900 fw-600 mb-lg-2 mb-1" data-aos="fade-up" data-aos-duration="400" data-aos-delay="0">The Role of AI in Revolutionizing Customer Service Across Industries</h2>
-                            <p class="text-gray-700 fw-400 pe-lg-5 mb-0" data-aos="fade-up" data-aos-duration="400" data-aos-delay="100">More balanced you — and works tirelessly to help you get there.</p>
+                            <p class="text-gray-700 fw-400 mb-0" data-aos="fade-up" data-aos-duration="400" data-aos-delay="100">More balanced you — and works tirelessly to help you get there.</p>
                         </div>
                         <div class="col-lg-12 pb-65" data-aos="fade-up" data-aos-duration="400" data-delay="00">
                             <img src="images/blog-20.jpg" alt="banner" class="object-fit-cover w-100 rounded-4" loading="eager">
@@ -243,7 +243,7 @@
                 </div>
                 <div class="row gy-4">
                     <div class="col-lg-4 " data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100">
-                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                        <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                             <div class="post-image scale-img overflow-hidden"><img src="images/blog-1.webp" alt="blog" loading="lazy"></div>
                             <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                 <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
@@ -263,7 +263,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 " data-aos="zoom-in" data-aos-duration="400" data-aos-delay="200">
-                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                        <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                             <div class="post-image scale-img overflow-hidden"><img src="images/blog-3.webp" alt="blog" loading="lazy"></div>
                             <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                 <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
@@ -283,7 +283,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 " data-aos="zoom-in" data-aos-duration="400" data-aos-delay="300">
-                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                        <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                             <div class="post-image scale-img overflow-hidden"><img src="images/blog-2.webp" alt="blog" loading="lazy"></div>
                             <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                 <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
