--- a/src/single-blog-2.html
+++ b/src/single-blog-2.html
@@ -349,7 +349,7 @@
                 </div>
                 <div class="row gy-4">
                     <div class="col-lg-4 " data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100">
-                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                        <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                             <div class="post-image scale-img overflow-hidden"><img src="images/blog-1.webp" alt="blog" loading="lazy"></div>
                             <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                 <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
@@ -369,7 +369,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 " data-aos="zoom-in" data-aos-duration="400" data-aos-delay="200">
-                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                        <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                             <div class="post-image scale-img overflow-hidden"><img src="images/blog-3.webp" alt="blog" loading="lazy"></div>
                             <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                 <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
@@ -389,7 +389,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 " data-aos="zoom-in" data-aos-duration="400" data-aos-delay="300">
-                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
+                        <a href="single-blog-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                             <div class="post-image scale-img overflow-hidden"><img src="images/blog-2.webp" alt="blog" loading="lazy"></div>
                             <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
                                 <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2">
